# Hera

./: .gitignore  Dockerfile  Makefile  README.md  hera.install  hera.opam
.github/workflows/: build.yaml
hera/: dispatcher.ml  dune  main.ml
hera/bot/: bot.ml  dune  module.ml
hera/bot_module/: dune
hera/db/: db.ml  dune  types.ml
hera/error_handler/: dune  error_handler.ml
hera/http/: dune  http.ml
hera/logging/: dune  logging.ml
hera/module_air_quality/: dune  module_air_quality.ml
hera/module_dictionary/: dune  module_dictionary.ml
hera/module_faces/: FaceDetector.cpp  FaceDetector.h  KeyPointDetector.cpp  KeyPointDetector.h  dune  module_faces.ml  module_faces_stubs.cpp
hera/module_faces/config/: discover.ml
hera/module_feeds/: db.ml  dune  feed.ml  feed_date.ml  module_feeds.ml  module_feeds.mli  subscription.ml  types.ml
hera/module_markets/: dune  markets.ml  module_markets.ml  module_markets.mli  position.ml  types.ml
hera/module_morejpeg/: dune  module_morejpeg.ml
hera/module_preferences/: dune  module_preferences.ml  module_preferences.mli
hera/module_stocks/: dune  module_stocks.ml  module_stocks.mli
hera/telegram/: dune  telegram.ml
hera/user_preference/: dune  user_preference.ml
