opam-version: "1.2"
maintainer: "mail@pierluigi.me"
authors: ["pNre"]
homepage: "https://github.com/pNre/hera"
bug-reports: "https://github.com/pNre/hera/issues"
dev-repo: "https://github.com/pNre/hera.git"

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune" {build & >= "1.0"}
]
