(executable
 (name main)
 (public_name hera)
 (libraries
  core_unix.command_unix
  async
  async_ssl
  cohttp
  cohttp-async
  yojson
  uri
  http
  telegram
  bot
  logging
  db
  user_preference
  module_dictionary
  module_markets
  module_feeds
  module_air_quality
  module_morejpeg
  module_faces
  module_preferences)
 (preprocess
  (pps ppx_let)))
