(library
 (name module_faces)
 (cxx_names module_faces_stubs FaceDetector KeyPointDetector)
 (cxx_flags
  (:include c_flags.sexp)
  -x
  c++
  --std=c++14
  -fPIC)
 (c_library_flags
  (:include c_libs.sexp)
  -lstdc++)
 (libraries
  async
  async_ssl
  camlimages.core
  camlimages.jpeg
  camlimages.png
  bot
  logging)
 (preprocess
  (pps ppx_deriving.show ppx_let)))

(rule
 (targets c_flags.sexp c_libs.sexp)
 (deps
  (:discover config/discover.exe))
 (action
  (run %{discover})))
